Basic Module setup done.
 Next step will be to create "frontend" modules for each implementation module; so that we have
- CrystalShard-Util
- CrystalShard-Logging
- CrystalShard-Core

And their implementations:
- CrystalShard-Util-8
- CrystalShard-Util-11
- CrystalShard-Logging-8
- CrystalShard-Core-8
- CrystalShard-Core-11

A lot of rewriting is connected to these steps.

Also, I have performed a code reformat in this commit.