@@ -6,6 +6,7 @@ import de.kaleidox.crystalshard.main.items.message.embed.Embed;
 import de.kaleidox.crystalshard.main.items.message.embed.EmbedDraft;
 import de.kaleidox.crystalshard.main.items.message.embed.SentEmbed;
 import de.kaleidox.crystalshard.util.helpers.UrlHelper;
+
 import java.awt.Color;
 import java.net.URL;
 import java.time.Instant;
@@ -38,16 +39,11 @@ public class SentEmbedInternal implements SentEmbed {
     
     public SentEmbedInternal(Message message, JsonNode data) {
         this.message = message;
-        this.title = data.path("title")
-                .asText(null);
-        this.description = data.path("description")
-                .asText(null);
-        this.url = UrlHelper.orNull(data.path("url")
-                                            .asText(null));
-        this.timestamp = (data.has("timestamp") ? Instant.parse(data.path("timestamp")
-                                                                        .asText()) : null);
-        this.color = (data.has("color") ? new Color(data.path("color")
-                                                            .asInt()) : null);
+        this.title = data.path("title").asText(null);
+        this.description = data.path("description").asText(null);
+        this.url = UrlHelper.orNull(data.path("url").asText(null));
+        this.timestamp = (data.has("timestamp") ? Instant.parse(data.path("timestamp").asText()) : null);
+        this.color = (data.has("color") ? new Color(data.path("color").asInt()) : null);
         this.footer = (data.has("footer") ? new Footer(data.path("footer")) : null);
         this.image = (data.has("image") ? new Image(data.path("image")) : null);
         this.thumbnail = (data.has("thumbnail") ? new Thumbnail(data.path("thumbnail")) : null);
@@ -68,16 +64,10 @@ public class SentEmbedInternal implements SentEmbed {
     
     @Override
     public Builder toBuilder() {
-        Builder builder = Embed.BUILDER()
-                .setTitle(title)
-                .setDescription(description)
-                .setUrl(Objects.nonNull(url) ? url.toExternalForm() : null)
-                .setTimestamp(timestamp)
-                .setColor(color)
-                .setFooter(Objects.nonNull(footer) ? footer.toDraft() : null)
-                .setImage(Objects.nonNull(image) ? image.toDraft() : null)
-                .setThumbnail(Objects.nonNull(thumbnail) ? thumbnail.toDraft() : null)
-                .setAuthor(Objects.nonNull(author) ? author.toDraft() : null);
+        Builder builder = Embed.BUILDER().setTitle(title).setDescription(description).setUrl(Objects.nonNull(url) ? url.toExternalForm() : null).setTimestamp(
+                timestamp).setColor(color).setFooter(Objects.nonNull(footer) ? footer.toDraft() : null).setImage(
+                Objects.nonNull(image) ? image.toDraft() : null).setThumbnail(Objects.nonNull(thumbnail) ? thumbnail.toDraft() : null).setAuthor(
+                Objects.nonNull(author) ? author.toDraft() : null);
         fields.forEach(field -> builder.addField(field.toDraft()));
         return builder;
     }
@@ -149,8 +139,7 @@ public class SentEmbedInternal implements SentEmbed {
     
     @Override
     public Updater getUpdater() throws IllegalAccessException {
-        if (!message.getAuthor()
-                .isYourself()) throw new IllegalAccessException("You cannot edit someone elses embed!");
+        if (!message.getAuthor().isYourself()) throw new IllegalAccessException("You cannot edit someone elses embed!");
         return new Updater(this);
     }
     
@@ -158,80 +147,62 @@ public class SentEmbedInternal implements SentEmbed {
     public CompletableFuture<SentEmbed> setTitle(String title) {
         Builder builder = toBuilder();
         builder.setTitle(title);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> setDescription(String description) {
         Builder builder = toBuilder();
         builder.setDescription(description);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> setUrl(String url) {
         Builder builder = toBuilder();
         builder.setUrl(url);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> setTimestamp(Instant timestamp) {
         Builder builder = toBuilder();
         builder.setTimestamp(timestamp);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> setColor(Color color) {
         Builder builder = toBuilder();
         builder.setColor(color);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> modifyFields(Consumer<Collection<EmbedDraft.EditableField>> fieldModifier) {
-        List<EmbedDraft.EditableField> fields = getFields().stream()
-                .map(SentEmbed.Field::toDraft)
-                .map(EmbedDraftInternal.EditableField::new)
-                .collect(Collectors.toList());
+        List<EmbedDraft.EditableField> fields = getFields().stream().map(SentEmbed.Field::toDraft).map(EmbedDraftInternal.EditableField::new).collect(Collectors
+                                                                                                                                                              .toList());
         fieldModifier.accept(fields);
         Builder builder = toBuilder();
         builder.removeAllFields();
         fields.forEach(builder::addField);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     @Override
     public CompletableFuture<SentEmbed> modifyFields(Predicate<SentEmbed.Field> tester, Consumer<EmbedDraft.EditableField> fieldModifier) {
         Builder builder = toBuilder();
         builder.removeAllFields();
-        getFields().stream()
-                .map(field -> {
-                    EmbedDraft.Field draftField = field.toDraft();
-                    if (tester.test(field)) {
-                        EmbedDraftInternal.EditableField editableField = new EmbedDraftInternal.EditableField(draftField);
-                        fieldModifier.accept(editableField);
-                        return editableField;
-                    }
-                    return draftField;
-                })
-                .forEach(builder::addField);
-        return message.edit(builder.build())
-                .thenApply(msg -> msg.getEmbed()
-                        .orElseThrow(AssertionError::new));
+        getFields().stream().map(field -> {
+            EmbedDraft.Field draftField = field.toDraft();
+            if (tester.test(field)) {
+                EmbedDraftInternal.EditableField editableField = new EmbedDraftInternal.EditableField(draftField);
+                fieldModifier.accept(editableField);
+                return editableField;
+            }
+            return draftField;
+        }).forEach(builder::addField);
+        return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
     }
     
     public class Updater implements SentEmbed.Updater {
@@ -243,6 +214,7 @@ public class SentEmbedInternal implements SentEmbed {
             this.message = embed.getMessage();
         }
         
+// Override Methods
         @Override
         public SentEmbed.Updater setTitle(String title) {
             builder.setTitle(title);
@@ -275,10 +247,7 @@ public class SentEmbedInternal implements SentEmbed {
         
         @Override
         public SentEmbed.Updater modifyFields(Consumer<Collection<EmbedDraft.EditableField>> fieldModifier) {
-            Collection<EmbedDraft.EditableField> fields = builder.getFields()
-                    .stream()
-                    .map(EmbedDraftInternal.EditableField::new)
-                    .collect(Collectors.toList());
+            Collection<EmbedDraft.EditableField> fields = builder.getFields().stream().map(EmbedDraftInternal.EditableField::new).collect(Collectors.toList());
             fieldModifier.accept(fields);
             builder.removeAllFields();
             fields.forEach(builder::addField);
@@ -287,29 +256,22 @@ public class SentEmbedInternal implements SentEmbed {
         
         @Override
         public SentEmbed.Updater modifyFields(Predicate<EmbedDraft.Field> tester, Consumer<EmbedDraft.EditableField> fieldModifier) {
-            Collection<EmbedDraft.EditableField> fields = builder.getFields()
-                    .stream()
-                    .map(EmbedDraftInternal.EditableField::new)
-                    .collect(Collectors.toList());
+            Collection<EmbedDraft.EditableField> fields = builder.getFields().stream().map(EmbedDraftInternal.EditableField::new).collect(Collectors.toList());
             builder.removeAllFields();
-            fields.stream()
-                    .map(field -> {
-                        if (tester.test(field)) {
-                            EmbedDraftInternal.EditableField editableField = new EmbedDraftInternal.EditableField(field);
-                            fieldModifier.accept(editableField);
-                            return editableField;
-                        }
-                        return field;
-                    })
-                    .forEach(builder::addField);
+            fields.stream().map(field -> {
+                if (tester.test(field)) {
+                    EmbedDraftInternal.EditableField editableField = new EmbedDraftInternal.EditableField(field);
+                    fieldModifier.accept(editableField);
+                    return editableField;
+                }
+                return field;
+            }).forEach(builder::addField);
             return this;
         }
         
         @Override
         public CompletableFuture<SentEmbed> update() {
-            return message.edit(builder.build())
-                    .thenApply(msg -> msg.getEmbed()
-                            .orElseThrow(AssertionError::new));
+            return message.edit(builder.build()).thenApply(msg -> msg.getEmbed().orElseThrow(AssertionError::new));
         }
     }
     
@@ -378,12 +340,9 @@ public class SentEmbedInternal implements SentEmbed {
         private final boolean inline;
         
         public Field(JsonNode data) {
-            this.title = data.path("title")
-                    .asText();
-            this.text = data.path("text")
-                    .asText();
-            this.inline = data.path("inline")
-                    .asBoolean(false);
+            this.title = data.path("title").asText();
+            this.text = data.path("text").asText();
+            this.inline = data.path("inline").asBoolean(false);
         }
         
         // Override Methods
